tests/src/snapshots/tests__tests__delimiter_errors-2.snap
---
source: tests/src/lib.rs
expression: "parse_pretty(json_value, r#\"[1true\"#, PrettyOptions::no_color()).unwrap_err()"
---
1 | [1true
      ^
[1:2] Expected ',' while parsing comma
