tests/src/snapshots/tests__tests__delimiter_errors.snap
---
source: tests/src/lib.rs
expression: "untwine::parse_pretty(json_value, r#\"[1 2]\"#,\n        PrettyOptions::no_color()).unwrap_err()"
---
1 | [1 2]
      -^
[1:3] Expected ',' while parsing comma
