tests/src/snapshots/tests__tests__expr-2.snap
---
source: tests/src/lib.rs
expression: "untwine::parse_pretty(expr, \"(1\\n\\n+\", false).unwrap_err()"
---
    | beginning here
    v
1 | (1
  | ...
3 | +
    -^
[3:1] Expected term
