tests/src/snapshots/tests__tests__expr.snap
---
source: tests/src/lib.rs
expression: "untwine::parse_pretty(expr, \"1.\", false).unwrap_err()"
---
1 | 1.
      ^
[1:2] Expected num
