tests/src/snapshots/tests__tests__num_list.snap
---
source: tests/src/lib.rs
expression: "untwine::parse_pretty(num_list, \"1,2,\",\n        PrettyOptions::no_color()).unwrap_err()"
---
1 | 1,2,
        ^
[1:4] Expected num
