tests/src/snapshots/tests__tests__optional_after_space.snap
---
source: tests/src/lib.rs
expression: "parse_pretty(optional_after_space, \" ?,\",\nPrettyOptions::no_color()).unwrap_err()"
---
1 |  ?,
    ---^
[1:3] Expected optional after space
