tests/src/snapshots/tests__tests__recovering_json-2.snap
---
source: tests/src/lib.rs
expression: "parse_pretty(json_value, r#\"[[,], 3, 1.]\"#,\nPrettyOptions::no_color()).unwrap_err()"
---
1 | [[,], 3, 1.]
      ^
[1:2] Expected json value

==========

1 | [[,], 3, 1.]
       ^
[1:3] Expected json value
