tests/src/snapshots/tests__tests__recovering_json-3.snap
---
source: tests/src/lib.rs
expression: "parse_pretty(json_value, r#\"[1., 2.5\"#,\nPrettyOptions::no_color()).unwrap_err()"
---
1 | [1., 2.5
     --^
[1:3] Expected float
