tests/src/snapshots/tests__tests__recovering_json-4.snap
---
source: tests/src/lib.rs
expression: "parse_pretty(json_value, r#\"[[],\"#, PrettyOptions::no_color()).unwrap_err()"
---
1 | [[],
        ^
[1:4] Expected json value
